--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,11 @@
 }
 
 .container {
+	width:100%;
+	zoom: 1;
+	position:relative;
+	margin: 0 auto;
     display: flex;
-    padding: 20px;
 }
 
 footer{
