--- a/css/content.css
+++ b/css/content.css
@@ -5,6 +5,10 @@
 	width:90%;
 }
 
+.content img:hover {
+    transform: scale(1.10);
+}
+
 .product-image-box {
   width: 100%;
   padding-top: 100%; /* 너비와 동일한 높이를 갖도록 (정사각형 비율) */
